--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Person.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Person.cshtml
@@ -54,7 +54,7 @@
     }
 }
 
-@using (Html.BeginForm("Index", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
+@using (Html.BeginForm("Resume", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
 {
     <div class ="container" style="padding-top: calc(0.5em + 6px); text-align:right;">
         <div class="row">
