--- a/SimRend1.1/SimRend/SimRend/Views/Shared/_Layout.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     </environment>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">SimRend</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +29,6 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <!--a class="nav-link" href="#">Búsqueda <span class="sr-only">(current)</span></a-->
                     <a class="nav-link" asp-area="" asp-controller="Solicitud" asp-action="Index">Busqueda<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -41,12 +41,53 @@
                     <a class="nav-link" href="#">Fondos Recientes</a>
                 </li>
             </ul>
-            <!--form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form-->
-        </div>
+
+
+            @using (Html.BeginForm("Logout", "Usuario", FormMethod.Get, new { @style = "border:none" }))
+            {
+            <div class="form-inline my-2 my-lg-0">
+                <a class="navbar-brand" style="color:white">@ViewData["_usuario"]</a>
+                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Salir</button>
+            </div>
+             }
+
+                
+
+                <!--form class="form-inline my-2 my-lg-0">
+
+            <input class="form-control mr-sm-2" type="text" placeholder="Buscar">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
+        </form-->
+            </div>
     </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   
 
 
 
@@ -71,8 +112,8 @@
             </div>
         </div>
     </nav-->
-
-    <partial name="_CookieConsentPartial" />
+    
+    <!--partial name="_CookieConsentPartial" /-->
 
     <div class="container body-content">
         @RenderBody()
@@ -81,10 +122,10 @@
             <p>&copy; 2018 - SimRend</p>
         </footer>
     </div>
-    
+
 
     <environment include="Development">
-        <script src="~/js/jquery.js"></script>
+        <script src="~/js/jquery-3.3.1.min.js"></script>
         <script src="~/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
 
@@ -105,6 +146,7 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+
     </environment>
 
     @RenderSection("Scripts", required: false)
