--- a/SimRend1.1/SimRend/SimRend/wwwroot/css/login.css
+++ b/SimRend1.1/SimRend/SimRend/wwwroot/css/login.css
@@ -404,7 +404,7 @@ p.change_link {
     position: absolute;
     color: rgb(127, 124, 124);
     left: 0px;
-    height: 20px;
+    height: 70px;
     width: 438px;
     padding: 17px 30px 20px 30px;
     font-size: 16px;
@@ -468,6 +468,21 @@ p.change_link {
 }
 
 #register {
+    position: absolute;
+    top: 0px;
+    width: 88%;
+    padding: 18px 6% 60px 6%;
+    margin: 0 35px;
+    /*background: rgb(247, 247, 247);*/
+    background: rgb(247, 247, 247,0.7);
+    border: 1px solid rgba(147, 184, 189,0.8);
+    -webkit-box-shadow: 0pt 2px 5px rgba(105, 108, 109, 0.7), 0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+    -moz-box-shadow: 0pt 2px 5px rgba(105, 108, 109, 0.7), 0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+    box-shadow: 0pt 2px 5px rgba(105, 108, 109, 0.7), 0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+    -webkit-box-shadow: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+
     z-index: 21;
     opacity: 0;
 }
