--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Create.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Create.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="form-group">
                     <label asp-for="Solicitud.NombreEvento" class="control-label">Nombre del evento</label>
-                    <input asp-for="Solicitud.NombreEvento" class="form-control" />
+                    <input asp-for="Solicitud.NombreEvento" class="form-control" required/>
                     <span asp-validation-for="Solicitud.NombreEvento" class="text-danger"></span>
                 </div>
 
