Procedimientos almacenados de organizacion
Crear y leer

--- a/SimRend1.1/SimRend/SimRend/Views/Shared/_Layout.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Fondos Recientes</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Usuario" asp-action="Organizacion">Organizaciones</a>
+                </li>
             </ul>
 
 
