--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Index.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Index.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Busqueda";
 }
 
-<h2>Búsqueda de Solicitudes</h2>
+<h3>Datos principales de la solicitud</h3>
+<hr />
+
 
 <table class="table">
     <thead>
