--- a/SimRend1.1/SimRend/SimRend/Views/Usuario/Organizacion.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Usuario/Organizacion.cshtml
@@ -7,25 +7,27 @@
 <div class="row">
   <div class="col-sm-9"><h3>Organizaciones</h3></div>
   <div class="col-sm-3"><br>
-      <button class="btn btn-primary my-2 my-sm-0" type="submit">Crear Organizacion</button></div>
+      <a href="@Url.Action("CrearOrganizacion", "Usuario")" class="btn btn-primary my-2 my-sm-0">Crear Organizacion</a></div>
 </div>
 <hr />
 
-<table class="table table-hover">
+<table class="table table-hover table-responsive">
   <thead>
     <tr>
       <th scope="col">Tipo de Organizacion</th>
       <th scope="col">Nombre</th>
-      <th scope="col"></th>
-      <th scope="col"></th>
+      <th scope="col" width="10%">Responsables</th>
+      <th scope="col" width="10%"></th>
+      <th scope="col" width="10%"></th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">oyeoyeoye</th>
-      <td>Mark</td>
       <td></td>
-      <td></td>
+      <td><button class="btn btn-primary my-2 my-sm-0" type="submit">Ver Responsables</button></td>
+      <td><button class="btn btn-primary my-2 my-sm-0" type="submit">Crear Responsable</button></td>
+      <td><button class="btn btn-primary my-2 my-sm-0" type="submit">Habilitar</button></td>
     </tr>
   </tbody>
 </table>
