--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Category.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Category.cshtml
@@ -8,71 +8,72 @@
     <h3 class="mr-auto my-2 my-lg-0">
         Categoría de los gastos del evento
         <!-- Button trigger modal -->
-        <!--button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalAgregarCategoria">
-            Agregar Categoria
-        </button-->
+
     </h3>
-
-    @using (Html.BeginForm("AgregarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
-    {
-        <div class="form-inline mr-auto my-2 my-lg-0">
-            <select class="form-control mr-sm-2" for="seleccionCategoria" name="Nombre">
-                <option value="" disabled selected>Selecciona una categoria</option>
-                @foreach (var item in Model)
-                {
-                    <option value="@item.Nombre">@item.Nombre</option>
-                }
-            </select>
-            <button type="submit" class="btn btn-primary my-2 my-sm-0">Agregar</button>
-        </div>
-
-    }
+    <!--div class="form-inline mr-auto my-2 my-lg-0">
+        <button type="button" class="btn btn-primary my-2 my-sm-0" data-toggle="modal" data-target="#modalAgregarCategoria">
+        </button>
+    </div-->
+   
+        @using (Html.BeginForm("AgregarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+        {
+            <div class="form-inline mr-auto my-2 my-lg-0">
+                <select class="form-control mr-sm-2" for="seleccionCategoria" name="Nombre">
+                    <option value="" disabled selected>Selecciona una categoria</option>
+                    @foreach (var item in Model)
+                    {
+                        <option value="@item.Nombre">@item.Nombre</option>
+                    }
+                </select>
+                <button type="submit" class="btn btn-primary my-2 my-sm-0">Agregar</button>
+            </div>
+        }
 </div>
 
-<hr />
+    <hr />
 
-@if (ViewData["Seleccionadas"] != null)
-{
-    @foreach (var item in ViewData["Seleccionadas"] as List<Categoria>)
+    @if (ViewData["Seleccionadas"] != null)
     {
-        @using (Html.BeginForm("EliminarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+        @foreach (var item in ViewData["Seleccionadas"] as List<Categoria>)
         {
-            <div class="container">
-                <div class="row">
-                    <div class=" mx-auto col-md-8">
-                        <div class="card">
-                            <div class="card-body d-flex justify-content-between align-items-center" for="eliminarCategoria">
-                                <input type="text" readonly="" class="form-control-plaintext" name="Nombre" value="@item.Nombre">
-                                <button type="submit" class="btn btn-warning btn-sm">Eliminar</button>
+            @using (Html.BeginForm("EliminarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+            {
+                <div class="container">
+                    <div class="row">
+                        <div class=" mx-auto col-md-8">
+                            <div class="card">
+                                <div class="card-body d-flex justify-content-between align-items-center" for="eliminarCategoria">
+                                    <input type="text" readonly="" class="form-control-plaintext" name="Nombre" value="@item.Nombre">
+                                    <button type="submit" class="btn btn-warning btn-sm">Eliminar</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            }
+
         }
-
     }
-}
 
-@using (Html.BeginForm("Person", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
-{
-    <div class =" container" style="padding-top: calc(0.5em + 6px); text-align:right;">
-        <div class="row">
-            <div class=" mx-auto col-md-8">
-                  <button type="submit" class="btn btn-success  my-2 my-sm-0">Siguiente</button>
+    @using (Html.BeginForm("Person", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
+    {
+        <div class =" container" style="padding-top: calc(0.5em + 6px); text-align:right;">
+            <div class="row">
+                <div class=" mx-auto col-md-8">
+                      <button type="submit" class="btn btn-success  my-2 my-sm-0">Siguiente</button>
+                </div>
             </div>
         </div>
-    </div>
-}
+    }
 
 
 
 
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
-    <!--#########################################Para crear solicitud#################################-->
+        <!--#########################################Para crear solicitud#################################-->
     <!-- MATERIAL DESIGN ICONIC FONT -->
     <!--link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css"-->
     <!-- STYLE CSS -->
@@ -100,19 +101,23 @@
             </div>
 
             <div class="modal-body">
-                using (Html.BeginForm("AgregarCategoria", "Solicitud", FormMethod.Post, new { style = "border:none" }))
+
+                @using (Html.BeginForm("AgregarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
                 {
-                    <div class="form-row">
-                        <select class="form-control" for="seleccionCategoria" name="Nombre">
-                            foreach (var item in Model)
-{
-                                <option value="item.Nombre">item.Nombre</option>
+                    <div class="form-inline mr-auto my-2 my-lg-0">
+                        <select class="form-control mr-sm-2" for="seleccionCategoria" name="Nombre">
+                            <option value="" disabled selected>Selecciona una categoria</option>
+                            @foreach (var item in Model)
+                            {
+                                <option value="@item.Nombre">@item.Nombre</option>
                             }
                         </select>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                        <button type="submit" class="btn btn-primary">Aceptar</button>
+
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary my-2 my-sm-0" data-dismiss="modal">Cerrar</button>
+                            <button type="submit" class="btn btn-primary my-2 my-sm-0">Agregar</button>
+                        </div>
                     </div>
                 }
             </div>
