--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Create.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Create.cshtml
@@ -21,13 +21,13 @@
 
                 <div class="form-group">
                     <label asp-for="Solicitud.LugarEvento" class="control-label">Lugar del evento</label>
-                    <input asp-for="Solicitud.LugarEvento" class="form-control" />
+                    <input asp-for="Solicitud.LugarEvento" class="form-control" required/>
                     <span asp-validation-for="Solicitud.LugarEvento" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Solicitud.FechaInicioEvento" class="control-label">Fecha inicio del evento</label>
-                    <input asp-for="Solicitud.FechaInicioEvento" type="date" class="form-control" />
+                    <input asp-for="Solicitud.FechaInicioEvento" type="date" class="form-control" required/>
                     <span asp-validation-for="Solicitud.FechaInicioEvento" class="text-danger"></span>
                 </div>
 
@@ -44,7 +44,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">$</span>
                             </div>
-                            <input asp-for="Solicitud.Monto" class="form-control" />
+                            <input asp-for="Solicitud.Monto" class="form-control" min="1" required/>
                         </div>
                         <span asp-validation-for="Solicitud.Monto" class="text-danger"></span>
                     </div>
@@ -55,6 +55,19 @@
                     <input asp-for="Solicitud.Responsable" class="form-control" />
                     <span asp-validation-for="Solicitud.Responsable" class="text-danger"></span>
                 </div-->
+
+
+                <!--div class="form-group">
+                        <label for="exampleSelect1">Example select</label>
+                        <select class="form-control" id="exampleSelect1">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div!-->
+
                 <div class="form-group">
                     <label asp-for="Solicitud.Responsable" class="control-label">Responsable de la solicitud</label>
                     <select asp-for="Solicitud.Responsable" class="form-control">
