--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Index.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Index.cshtml
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Responsable)
             </th>
+            <th>
+                Ver Solicitud
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -59,6 +62,15 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Responsable)
+                    </td>
+
+                    <td>
+                        @using (Html.BeginForm("IrResumen", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+                        {
+                            <input type="hidden" readonly="" class="form-control-plaintext" name="IdSolicitud" value="@item.Id">
+                            <button type="submit" class="btn btn-warning btn-sm">Ver</button>
+               
+                        }
                     </td>
                 </tr>
             }
