--- a/SimRend1.1/SimRend/SimRend/Views/Resolucion/Resolucion.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Resolucion/Resolucion.cshtml
@@ -38,7 +38,7 @@
 
             <div class="control">
                 <span><B>Responsable: </B></span>
-                @Html.DisplayFor(model => model.Solicitud.Responsable)
+                @Html.DisplayFor(model => model.Solicitud.NombreResponsable)
             </div>
         </div>
     </div>
@@ -88,28 +88,3 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
