--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Category.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Category.cshtml
@@ -4,62 +4,99 @@
     ViewData["Title"] = "Crear Solicitud";
 }
 
-<div class="form-inline" style="padding-top: calc(0.5em + 6px);">
-    <h2>Categoría de los gastos del evento</h2>
-    <div class="form-inline mr-auto my-2 my-lg-0">
-        <button type="button" class="btn btn-primary my-2 my-sm-0" data-toggle="modal" data-target="#modalAgregarCategoria">Agregar</button>
+    <div class="form-inline" style="padding-top: calc(0.5em + 6px);">
+        <h2>Categoría de los gastos del evento</h2>
+
+        <div class="wrapper toggle">
+            <a href="#popup" ><button class="buttonPrimary"  name="">Agregar Categorías</button></a>
+        </div>
     </div>
 
-    <!--@using (Html.BeginForm("AgregarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
-            {
-                <div class="form-inline mr-auto my-2 my-lg-0">
-                    <select class="form-control mr-sm-2" for="seleccionCategoria" name="Nombre">
-                        <option value="" disabled selected>Selecciona una categoria</option>
-                        @foreach (var item in Model)
-                        {
-                            <option value="@item.Nombre">@item.Nombre</option>
-                        }
-                    </select>
-                    <button type="submit" class="btn btn-primary my-2 my-sm-0">Agregar</button>
-                </div>
-            }-->
-    </div>
 
-        <hr />
-
-        @if (ViewData["Seleccionadas"] != null)
-        {
-            @foreach (var item in ViewData["Seleccionadas"] as List<Categoria>)
+    <!--Contenido-->
+    <div class="contenedor_formulario">
+        <div class="fieldsContainer">
+            @if (ViewData["Seleccionadas"] != null)
             {
-                @using (Html.BeginForm("EliminarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+                @foreach (var item in ViewData["Seleccionadas"] as List<Categoria>)
                 {
-                    <div class="container">
-                        <div class="row">
-                            <div class=" mx-auto col-md-8">
-                                <div class="card">
-                                    <div class="card-body d-flex justify-content-between align-items-center" for="eliminarCategoria">
-                                        <input type="text" readonly="" class="form-control-plaintext" name="Nombre" value="@item.Nombre">
-                                        <button type="submit" class="btn btn-warning btn-sm">Eliminar</button>
+                    @using (Html.BeginForm("EliminarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+                    {
+                        <div class="cards">
+                            <div class="" for="eliminarCategoria">
+                                <div class="cards">
+                                    <div class="card">
+                                        <input type="text" readonly="" class="" style="border:none; margin-top: 5px;" name="Nombre" value="@item.Nombre">
+                                    </div>
+                                    
+                                    <div class="card">
+                                        <div class="wrapper">
+                                            <button type= "submit" class="buttonDelete"   name="">Eliminar</button>
+                                        </div>
                                     </div>
                                 </div>
+                                
                             </div>
+                            
                         </div>
-                    </div>
+                    }
                 }
-
             }
-        }
+        </div>
+    </div>
 
-        @using (Html.BeginForm("Person", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
-        {
-            <div class =" container" style="padding-top: calc(0.5em + 6px); text-align:right;">
-                <div class="row">
-                    <div class=" mx-auto col-md-8">
-                          <button type="submit" class="btn btn-success  my-2 my-sm-0">Siguiente</button>
-                    </div>
+    @using (Html.BeginForm("Person", "Solicitud", FormMethod.Get, new { @style = "border:none" }))
+    {
+        <div class =" container" style="padding-top: calc(0.5em + 6px); text-align:right;">
+            <div class="row">
+                <div class="wrapper toggle">
+                    <button type="submit" class="buttonPrimary"  name="">Siguiente</button>
                 </div>
             </div>
-        }
+        </div>
+    }
+    <!--Fin Contenido-->
+
+
+
+
+    <!-- Modal -->
+    <div class="modal-wrapper" id="popup">
+        <div class="popup-contenedor">
+            <div class="bar-title">
+                <span>Agregar categoría</span>
+            </div>
+        <!--h2>Agregar categoría</h2-->
+
+            @using (Html.BeginForm("AgregarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+            {
+                <div class="popup-contenido">
+                    <div class="control">
+                        <span style="margin-left:5%; margin-rigth:5%;">Seleccione la categoría que desea agregar</span>
+                        <select class="" for="seleccionCategoria" name="Nombre">
+                            <option value="" disabled selected>Selecciona una categoría</option>
+                                @foreach (var item in Model)
+                                {
+                                    <option value="@item.Nombre">@item.Nombre</option>
+                                }
+                        </select>
+                    </div>
+                </div>
+
+                <div class="popup-footer">
+                    <div class="wrapperOrientacionBotonFormulario">
+                        <div class="wrapper wrapperBotonFormulario toggle">
+                            <a href="#"><button type="button" class="buttonSecundary" data-dismiss="modal">Cerrar</button></a>
+                        </div>
+                        <div class="wrapper wrapperBotonFormulario toggle">
+                            <button type="submit" class="buttonPrimary"  name="">Agregar</button>
+                        </div>
+                    </div>
+                </div>
+            }
+            <!--a class="popup-cerrar" href="#">X</a-->
+        </div>
+    </div>
 
 
 
@@ -69,57 +106,22 @@
             @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
             <!--#########################################Para crear solicitud#################################-->
-    <!-- MATERIAL DESIGN ICONIC FONT -->
-    <!--link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css"-->
-    <!-- STYLE CSS -->
-    <link rel="stylesheet" href="~/css/style.css">
-    <!--#################################################################################################-->
-    <!--#############Para crear una solicitud################-->
-    <script src="~/js/jquery-3.3.1.min.js"></script>
-    <!-- JQUERY STEP -->
-    <script src="~/js/jquery.steps.js"></script>
-    <script src="~/js/main.js"></script>
-    <!--#####################################################-->
-    <script src="~/js/bootstrap.js"></script>
-
-}
-
-<!-- Modal -->
-<div class="modal fade" id="modalAgregarCategoria" tabindex="-1" role="dialog" aria-labelledby="modalAgregarCategoria" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Seleccione la categoría que desea agregar</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-
-            <div class="modal-body">
-
-                @using (Html.BeginForm("AgregarCategoria", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
-                {
-                <div class="form-inline mr-auto my-2 my-lg-0">
-
-                    <div class="control">
-                        <span>Seleccione la categoría que desea agregar</span>
-                        <select class="" for="seleccionCategoria" name="Nombre">
-                            <option value="" disabled selected>Selecciona un responsable</option>
-                                @foreach (var item in Model)
-                                {
-                                    <option value="@item.Nombre">@item.Nombre</option>
-                                }
-                        </select>
-                    </div>
+            <!-- MATERIAL DESIGN ICONIC FONT -->
+            <!--link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.css"-->
+            <!-- STYLE CSS -->
+            <!--link rel="stylesheet" href="~/css/style.css"-->
+            <!--#################################################################################################-->
+            <!--#############Para crear una solicitud################-->
+            <!--script src="~/js/jquery-3.3.1.min.js"></script-->
+            <!-- JQUERY STEP -->
+            <!--script src="~/js/jquery.steps.js"></script-->
+            <!--script src="~/js/main.js"></script-->
+            <!--#####################################################-->
+            <!--script src="~/js/bootstrap.js"></script-->
 
 
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary my-2 my-sm-0" data-dismiss="modal">Cerrar</button>
-                        <button type="submit" class="btn btn-primary my-2 my-sm-0" >Agregar</button>
-                    </div>
-                </div>
-                }
-            </div>
-        </div>
-    </div>
-</div>
+        }
+
+
+
+
