--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Create.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Create.cshtml
@@ -6,11 +6,10 @@
 }
 
 <h2>Datos principales de la solicitud</h2>
-
+@using (Html.BeginForm("Create", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
+{
 <div class="contenedor_formulario">
     <div class="form">
-        @using (Html.BeginForm("Create", "Solicitud", FormMethod.Post, new { @style = "border:none" }))
-        {
         <div class="contenedor_input">
 
             <div class="control">
@@ -20,12 +19,6 @@
                 <input asp-for="Solicitud.NombreEvento" class="" required="required" type="text" placeholder="Nombre del evento">
             </div>
 
-            <!--div class="form-group">
-        <label asp-for="Solicitud.NombreEvento" class="control-label">Nombre del evento</label>
-        <input asp-for="Solicitud.NombreEvento" class="form-control" required />
-        <span asp-validation-for="Solicitud.NombreEvento" class="text-danger"></span>
-    </div-->
-
             <div class="control">
                 <!--label for="email" class="fa fa-user"></label-->
                 <!--input asp-for="Usuario" class="uname" required="required" type="text" placeholder="Nombre de la persona" /-->
@@ -33,37 +26,22 @@
                 <input asp-for="Solicitud.LugarEvento" class="" required="required" type="text" placeholder="Lugar del evento">
             </div>
 
-            <!--div class="form-group">
-        <label asp-for="Solicitud.LugarEvento" class="control-label">Lugar del evento</label>
-        <input asp-for="Solicitud.LugarEvento" class="form-control" required />
-        <span asp-validation-for="Solicitud.LugarEvento" class="text-danger"></span>
-    </div-->
+            <div class="form-inline-fechas">
+                <div class="control fecha1">
+                    <!--label for="email" class="fa fa-user"></label-->
+                    <!--input asp-for="Usuario" class="uname" required="required" type="text" placeholder="Nombre de la persona" /-->
+                    <span>Fecha de inicio del evento</span>
+                    <input asp-for="Solicitud.FechaInicioEvento" class="" required="required" type="date" placeholder="Fecha de inicio del evento">
+                </div>
 
-            <div class="control">
-                <!--label for="email" class="fa fa-user"></label-->
-                <!--input asp-for="Usuario" class="uname" required="required" type="text" placeholder="Nombre de la persona" /-->
-                <span>Fecha de inicio del evento</span>
-                <input asp-for="Solicitud.FechaInicioEvento" class="" required="required" type="date" placeholder="Fecha de inicio del evento">
+                <div class="control fecha2">
+                    <!--label for="email" class="fa fa-user"></label-->
+                    <!--input asp-for="Usuario" class="uname" required="required" type="text" placeholder="Nombre de la persona" /-->
+                    <span>Fecha de termino del evento</span>
+                    <input asp-for="Solicitud.FechaTerminoEvento" class="" required="required" type="date" placeholder="Fecha de término del evento">
+                </div>
             </div>
-
-            <!--div class="form-group">
-        <label asp-for="Solicitud.FechaInicioEvento" class="control-label">Fecha inicio del evento</label>
-        <input asp-for="Solicitud.FechaInicioEvento" type="date" class="form-control" required />
-        <span asp-validation-for="Solicitud.FechaInicioEvento" class="text-danger"></span>
-    </div-->
-
-            <div class="control">
-                <!--label for="email" class="fa fa-user"></label-->
-                <!--input asp-for="Usuario" class="uname" required="required" type="text" placeholder="Nombre de la persona" /-->
-                <span>Fecha de termino del evento</span>
-                <input asp-for="Solicitud.FechaTerminoEvento" class="" required="required" type="date" placeholder="Fecha de término del evento">
-            </div>
-
-            <!--div class="form-group">
-        <label asp-for="Solicitud.FechaTerminoEvento" class="control-label">Fecha término del evento</label>
-        <input asp-for="Solicitud.FechaTerminoEvento" type="date" class="form-control" />
-        <span asp-validation-for="Solicitud.FechaTerminoEvento" class="text-danger"></span>
-    </div-->
+            
 
             <div class="control">
                 <!--label for="email" class="fa fa-user"></label-->
@@ -74,24 +52,11 @@
 
             </div>
 
-            <!--div class="form-group">
-        <label asp-for="Solicitud.Monto" class="control-label">Monto a solicitar</label>
-        <div class="form-group">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">$</span>
-                </div>
-                <input asp-for="Solicitud.Monto" class="form-control" min="1" required />
-            </div>
-            <span asp-validation-for="Solicitud.Monto" class="text-danger"></span>
-        </div>
-    </div-->
-
             <div class="control">
                 <!--label for="email" class="fa fa-user"></label-->
                 <!--input asp-for="Usuario" class="uname" required="required" type="text" placeholder="Nombre de la persona" /-->
                 <span>Responsable</span>
-                <select asp-for="Solicitud.Responsable" class="">
+                <select asp-for="Solicitud.RutResponsable" class="">
                     <option value="" disabled selected>Selecciona un responsable</option>
                     @if (Model.Responsables != null)
                     {
@@ -102,36 +67,15 @@
                     }
                 </select>
             </div>
-
-
-            <!--div class="form-group">
-        <label asp-for="Solicitud.Responsable" class="control-label">Responsable de la solicitud</label>
-        <select asp-for="Solicitud.Responsable" class="form-control">
-            <option value="" disabled selected>Selecciona un responsable</option>
-            @if (Model.Responsables != null)
-            {
-                @foreach (var item in Model.Responsables)
-                {
-                    <option value="@item.Run">@item.Nombre</option>
-                }
-            }
-        </select>
-    </div-->
-            <div class="wrapperOrientacionBotonFormulario">
-                <div class="wrapper">
-                    <button class="buttonPrimary" type="submit" name="">Siguiente</button>
-                </div>
-            </div>
-                
-
-                <!--div class="form-group" style="padding-top: calc(0.5em + 6px); text-align:right;">
-            <input type="submit" value="Siguiente" class="btn btn-success my-2 my-sm-0" />
-        </div-->
-
-            </div>
-            }
         </div>
+    </div> 
 </div>
+<div class="wrapperOrientacionBotonFormulario">
+    <div class="wrapper">
+        <button class="buttonPrimary" type="submit" name="">Siguiente</button>
+    </div>
+</div>
+}
     
 
  
