--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/Index.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/Index.cshtml
@@ -73,7 +73,7 @@
                             @Html.DisplayFor(modelItem => item.LugarEvento)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Responsable)
+                            @Html.DisplayFor(modelItem => item.NombreResponsable)
                         </td>
 
                         <td>
