--- a/SimRend1.1/SimRend/SimRend/wwwroot/css/formulario.css
+++ b/SimRend1.1/SimRend/SimRend/wwwroot/css/formulario.css
@@ -4,7 +4,7 @@
     margin-bottom:20px;
     padding: 15px;
     padding-top:5px;
-    padding-bottom:0px;
+    padding-bottom:10px;
     /*background-color: #fff;*/
     background-color: rgba(255, 255, 255, 0.5);
     /*background: transparent;*/
@@ -12,12 +12,12 @@
     border-radius: 0px 60px 60px 60px;
     -moz-border-radius: 0px 60px 60px 60px;
     -webkit-border-radius: 0px 60px 60px 60px;
-
 }
 
-    /*.contenedor_formulario .contenedor_input {
-        margin-bottom: 25px;
-    }*/
+    .contenedor_formulario .contenedor_input {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
 
     .contenedor_formulario .control {
         margin-bottom: 10px;
@@ -41,11 +41,12 @@
             width: 100%;
         }
 
-        .contenedor_formulario .control select {
+        .contenedor_formulario .control select, .contenedor_formulario .control select::-webkit-select-placeholder {
             padding: 5px 0px 5px 30px;
             border-radius: 4px;
             border: 1px solid #ccc;
             box-shadow: 0 10px 20px rgba(0,0,0,.7);
+            font-size: 12px;
             width: 100%;
         }
 
@@ -70,4 +71,163 @@
         .contenedor_formulario .form .wrapper {
             padding-top: 20px;
         }
+
+
+    .fieldsContainer{
+        display: grid;
+        grid-auto-rows: 50px;
+        grid-gap: 10px;
+        margin: 2%;
+        height: 350px;
+        overflow-y:auto;/*added*/
+      }
+      
+      /*.card{
+        padding-top: 10px;
+        background: rgb(255, 255, 255);
+        text-align: center;
+      }*/
+
+      /*Card utilizada para la interfaz de agregar categoría en la etapa de solicitud*/
+      .cards {
+ 
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        grid-auto-rows: auto;
+        grid-gap: 100%;
+        background: rgb(255, 255, 255);
+        
+         
+        }
+
+        .card {
+         
+            border: 2px solid #e7e7e7;
+            border-radius: 4px;
+            padding: .5rem;
+            padding-left: 0;
+            padding-right: 0;
+            border:none;
+            width: 99%;
+            text-align: center;
+         
+        }
+
+        /*Card utilizada para la interfaz de agregar personas en la etapa de solicitud*/
+        .cards1 {
+ 
+            display: grid;
+            grid-template-columns: repeat(3, 33.2%);
+            grid-auto-rows: auto;
+            background: rgb(255, 255, 255);
+            
+             
+            }
+            .card1 {
+         
+                border: 2px solid #e7e7e7;
+                border-radius: 4px;
+                padding: .5rem;
+                padding-left: 0;
+                padding-right: 0;
+                border:none;
+                width: 100%;
+                text-align: center;
+             
+            }
+    
+         
+        
+
+
+/*Formulario con el elementos en una linea que parece que no ocupo pero se debe revisar*/
+ /* Style the form - display items horizontally */
+ .form-inline {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+  }
+  
+  /* Add some margins for each label */
+  .form-inline label {
+    margin: 5px 10px 5px 0;
+  }
+  
+  /* Style the input fields */
+  .form-inline input {
+    vertical-align: middle;
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+  }
+
+
+.form-inline {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+  }
+  
+  /* Add some margins for each label */
+  .form-inline label {
+    margin: 5px 10px 5px 0;
+  }
+  
+  /* Style the input fields */
+  .form-inline input {
+    vertical-align: middle;
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+  }
+
+
+  /*,dkjfhsldkjh*/
+
+  .form-inline-fechas {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+  }
+  
+  /* Add some margins for each label */
+  .form-inline-fechas label {
+    margin: 5px 10px 5px 0;
+  }
+  
+  /* Style the input fields */
+  .form-inline-fechas input {
+    vertical-align: middle;
+    padding: 5px 0px 5px 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+  }
+
+  .fecha1
+  {
+      padding-right: 10%;
+      width: 45%;
+  }
+  .fecha2
+  {
+      width: 45%;
+  }
+  
+
+  
+  /* Add responsiveness - display the form controls vertically instead of horizontally on screens that are less than 800px wide */
+  @media (max-width: 800px) {
+    .form-inline input {
+      margin: 10px 0;
+    }
+  
+    .form-inline {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  } 
+
+
 
