--- a/SimRend1.1/SimRend/SimRend/wwwroot/css/modal.css
+++ b/SimRend1.1/SimRend/SimRend/wwwroot/css/modal.css
@@ -1,2 +1,196 @@
-﻿body {
+﻿#popup {
+    visibility: hidden;
+    opacity: 0;
+    margin-top: -300px;
+ }
+ #popup:target {
+    visibility:visible;
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0);
+    
+    position: fixed;
+    top:-2%;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:0;
+    z-index: 999;
+    transition:all 1s;
+ }
+ 
+ .popup-contenedor {
+    position: relative;
+    margin:2% auto;
+    padding:30px 50px;
+    background-color: #fafafa00;
+    color:#333;
+    border-radius: 3px;
+    width:50%;
+    
+ }
+ .popup-contenido {
+     width:100%;
+     padding: 5% 0 5% 0;
+     background-color: #fafafa;
+     box-shadow: 0 10px 20px rgba(0,0,0,.7);
 }
+
+.popup-contenido .contenedor_input {
+    margin-left: 5%;
+    margin-right: 10%;
+}
+
+.popup-contenido .control {
+
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.popup-contenido .control label {
+        position: absolute;
+        font-size: 16px;
+        top: 11px;
+        left: 9px;
+        color: rgba(0,0,0,0.3);
+    }
+
+    .popup-contenido .control span {
+        font-size: 14px;
+    }
+
+    .popup-contenido .control input, .popup-contenido .control input::-webkit-input-placeholder {
+        padding: 5px 0px 5px 30px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        box-shadow: 0 5px 10px rgba(0,0,0,.3);
+        font-size: 12px;
+        width: 100%;
+    }
+
+    .popup-contenido .control select, .popup-contenido .control select::-webkit-select-placeholder {
+        padding: 5px 0px 5px 30px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        box-shadow: 0 5px 10px rgba(0,0,0,.3);
+        font-size: 12px;
+        margin-right:5%;
+        width: 100%;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ .popup-footer {
+
+    width: 100%;
+    background: #fafafa;
+    border-radius: 0px 0px 15px 15px;
+    padding: 15px 0;
+    box-shadow: 0 10px 5px  rgba(0,0,0,.7);
+    
+  }
+
+ a.popup-cerrar {
+    position: absolute;
+    top:3px;
+    right:3px;
+    background-color: #333;
+    padding:7px 10px;
+    font-size: 20px;
+    text-decoration: none;
+    line-height: 1;
+    color:#fff;
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.notice {
+  position: relative;
+  top: 50%;
+  width: 90%;
+  height: 200px;
+  border-radius: 15px;
+  background: #fff;
+  margin: auto;
+  z-index: 1;
+  margin-top: -100px;
+}
+.notice p {
+  padding: 15px 40px;
+}
+
+.close {
+  width: 25px;
+  height: 25px;
+  background: #fff;
+  position: absolute;
+  text-align: center;
+  right: -7px;
+  top: -7px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.close img{
+  margin-top: 6px;
+  margin-left: 1px;
+  width: 12px;
+}
+.modal {
+  position: fixed;
+  background: rgba(0,0,0,0.7);
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.modal,
+.notice {
+  display: none;
+}
+
+
+.bar-title{
+  width: 100%;
+  background: rgba(73,213,168,0.7);;
+  border-radius: 15px 15px 0 0;
+  padding: 15px 0;
+}
+
+.bar-title span{
+  color: #fff;
+  margin-left: 30px;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+
+
